# rust_agent

./: .env.example  Cargo.toml  README.md
src/: lib.rs  main.rs  state.rs
src/application/: mod.rs
src/application/errors/: mod.rs
src/application/services/: agent_service.rs  mod.rs  status_service.rs
src/core/: config.rs  mod.rs
src/domain/: mod.rs
src/domain/models/: health_status.rs  mod.rs
src/domain/repositories/: mod.rs
src/domain/services/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: mod.rs
src/interfaces/: mod.rs
src/interfaces/endpoints/: mod.rs  session.rs  status.rs
src/interfaces/errors/: mod.rs
src/interfaces/schemas/: mod.rs  response.rs  session.rs  sse.rs
