[package]
name = "rust_claw"
version = "0.1.0"
edition = "2024"

[dependencies]
adk-rust = { version = "1.0.0", features = ["deepseek"] }
anyhow = "1.0.100"
async-stream = "0.3.6"
axum = "0.8.9"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
